fix: Vendor dashboard table layout on mobile screen

--- a/assets/src/less/responsive.less
+++ b/assets/src/less/responsive.less
@@ -40,7 +40,7 @@
   .dokan-dashboard {
     .dokan-dashboard-content {
       .dokan-table {
-        display: inline-block;
+        display: block;
         overflow: scroll;
       }
     }
@@ -330,6 +330,10 @@
       float: none;
       width: 100%;
       padding: 20px;
+
+      .dokan-table {
+        display: table;
+      }
 
       article {
         overflow: scroll;
